# quickconvolution

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  CMakeSettings.json  CMakeSettings.json~  LICENSE  Makefile  Makefile~  README.md  Timeline.c  Timeline.h  blur_plan.c  blur_plan.h  blurimage.c  box.c  box.h  main.c  main.c~  readnumerictable.c  readnumerictable.h  staticHelpers.c  staticHelpers.c~  staticHelpers.h
